@@ -1,6 +1,8 @@
 2011-09-05
 * add unpacking for base64 encoded files. This will not always work, because we
 can't determine where a base64 encoded starts or ends.
+* split at \r, similar to \n. The 'strings' command will split at either and
+so should we to get better matches.
 
 2011-09-04
 * add experimental virus scanning method using clamscan, just for Windows
